--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_fr.properties
@@ -1,6 +1,6 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=Un sous-ensemble de groupes a été affiché pour que vous le vérifiez.
 a-subset-of-users-has-been-displayed-for-you-to-review=Un sous-ensemble d'utilisateurs a été affiché pour que vous le vérifiez.
-account-created-notification-body-with-password-help=Entrez le corps de l'e-mail envoyé aux utilisateurs à l'issue de l'enregistrement. Celui-ci devrait contenir le mot de passe généré automatiquement pour l'utilisateur.
+account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password. (Automatic Copy)
 account-created-notification-body-without-password-help=Entrer le corps du mail à envoyer aux utilisateurs lors de l'inscription. Il ne contient pas de mot de passe utilisateur.
 add-ldap-server=Ajouter un serveur LDAP
 allow-site-administrators-to-display-content-from-other-sites-they-administer=Permettre aux administrateurs d'afficher le contenu provenant des autres sites qu'ils administrent.
@@ -9,8 +9,6 @@ allow-strangers-to-create-accounts=Permettre aux internautes de créer des compt
 allow-strangers-to-create-accounts-with-a-company-email-address=Permettre aux internautes de créer des comptes avec des adresses email de l'entreprise ?
 allow-subsites-to-display-content-from-parent-sites=Permettre aux sous-sites d'afficher du contenu des sites parents.
 allow-users-to-automatically-log-in=Autoriser les utilisateur à se connecter automatiquement?
-allow-users-to-request-forgotten-passwords=Permettre aux utilisateurs de demander des mots de passe oubliés ?
-allow-users-to-request-forgotten-passwords-help=Si coché, les utilisateurs peuvent demander l'envoi à leur adresse mail le nouveau mot de passe envoyé.
 allow-users-to-request-password-reset-links=Autoriser les utilisateurs à demander des liens de réinitialisation de mot de passe?
 allow-users-to-request-password-reset-links-help=Si coché, les utilisateurs peuvent demander à l'envoi à leur adresse mail le lien de réinitialisation de mot de passe.
 appearance=Apparence
@@ -19,6 +17,7 @@ apply-to-existing-users=Appliquez-vous aux utilisateurs existants
 are-you-sure-you-want-to-reset-the-configured-values=Voulez-vous vraiment réinitialiser les valeurs configurées ?
 autogenerate-user-screen-names=Noms d'écran d'utilisateur d'Autogenerate
 body-with-password=Corps de page avec mot de passe
+body-with-password-link=Body with Password Link (Automatic Copy)
 body-without-password=Corps de page sans mot de passe
 cas-login-url-help=Réglez l'URL de connexion au serveur CAS. Les utilisateurs sont redirigés vers la page de connexion à CAS quand ils se connectent au portail.
 cas-logout-on-session-expiration=Déconnexion à cause de l'expiration de session.
@@ -49,6 +48,8 @@ domain-controller-name-help=Spécifiez le nom de NetBIOS de contrôleur de domai
 edit-ldap-server=Editer un serveur LDAP
 email-address-attribute=Attribut d'adresse email
 email-sender=Émetteur de l'e-mail
+email-with-password=Email with Password (Automatic Copy)
+email-without-password=Email without Password (Automatic Copy)
 enable-birthday=Permettez l'anniversaire
 enable-cdn-dynamic-resources=Activer les ressource dynamiques de CDN
 enable-export=Activer export
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=Notez que si vous activez cela, le portail ne recherchera pas les mots de passe valides, mots de passe expirés ou utilisateurs verrouillés. Tout cela est maintenant géré par la police de mots de passe du serveur LDAP.
 ldap-server-name=Nom
 ldap-servers=Serveurs de LDAP
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
 liferay-analytics-key=Clé d'analytique Liferay
 liferay-has-failed-to-connect-to-the-ldap-server=Liferay n'a pas pu se connecter au serveur LDAP. Veuillez vérifier votre configuration et vérifiez que le serveur LDAP fonctionne.
 liferay-has-failed-to-connect-to-the-opensso-server=Liferay ne s'est pas relié au serveur d'OpenSSO. Veuillez vérifier votre configuration et vérifiez que le serveur d'OpenSSO fonctionne.
@@ -121,6 +123,7 @@ reset-values=Remettre à zéro Les Valeurs
 screen-name-attribute=Attribut Pseudonyme
 screen-names=Noms d'écran
 select-the-default-ratings-type-for-the-following-applications=Sélectionner le type de notation par défaut pour les applications suivantes. Ces valeurs peuvent être modifiées par site à travers les paramètres de site.
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 service-url-for-opensso-help=Cette URL est où OpenSSO peut être accédée pour utiliser les services web d'authentification. Si vous utilise OpenSSO Express 8 ou plus récent, vous avez besoin d'un serveur où Java 6 est installé.
 ssl-error=Erreur SSL
 system.ldap.configuration.name=Système LDAP
