--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_sv.properties
@@ -1,6 +1,6 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=En delmängd grupper visas för ditt godkännande
 a-subset-of-users-has-been-displayed-for-you-to-review=En delmängd användare visas för ditt godkännande
-account-created-notification-body-with-password-help=Skriv in meddelandetexten för mejlet som skall skickas till användare som bekräftar att de registrerats. Detta mejl innehåller oftast ett automatiskt genererat lösenord.
+account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password. (Automatic Copy)
 account-created-notification-body-without-password-help=Ange meddelandetexten i e-postmeddelandet som skickas till användare som bekräftar att de registrerats. E-postmeddelandet innehåller inte användarens lösenord.
 add-ldap-server=Lägg till LDAP-server
 allow-site-administrators-to-display-content-from-other-sites-they-administer=Tillåt webbplatsadministratörer att visa innehåll från andra webbplatser som de administrerar.
@@ -9,8 +9,6 @@ allow-strangers-to-create-accounts=Tillåt andra personer att skapa konto?
 allow-strangers-to-create-accounts-with-a-company-email-address=Tillåt okända att skapa konton med företags-epost?
 allow-subsites-to-display-content-from-parent-sites=Tillåt underwebbplatser att visa innehåll från överordnade webbplatser.
 allow-users-to-automatically-log-in=Vill du tillåta att användare loggas in automatiskt?
-allow-users-to-request-forgotten-passwords=Tillåt användarna att begära glömda lösenord?
-allow-users-to-request-forgotten-passwords-help=Om detta markeras kan användare begära att få ett nytt lösenord skickat till sin e-postadress.
 allow-users-to-request-password-reset-links=Skall användare få begära ut länkar som återställer deras lösenord?
 allow-users-to-request-password-reset-links-help=Om detta markeras kan användare begära att få en länk med lösenordsåterställning skickat till sin e-postadress.
 appearance=Utseende
@@ -19,6 +17,7 @@ apply-to-existing-users=Utför för befintliga användare
 are-you-sure-you-want-to-reset-the-configured-values=Vill du verkligen återställa de konfigurerade värdena?
 autogenerate-user-screen-names=Automatgenerera användarnamn
 body-with-password=Meddelandetext med lösenord
+body-with-password-link=Body with Password Link (Automatic Copy)
 body-without-password=Meddelandetext utan lösenord
 cas-login-url-help=Ange URL för serverinloggning på CAS. Användare omdirigeras till inloggningssidan på CAS under autentiseringen på portalen.
 cas-logout-on-session-expiration=Logga ut när sessionen är slut.
@@ -49,6 +48,8 @@ domain-controller-name-help=Ange domänkontrollerns NetBIOS namn.
 edit-ldap-server=Lägg till LDAP-server
 email-address-attribute=E-postadressattribut
 email-sender=Avsändare
+email-with-password=Email with Password (Automatic Copy)
+email-without-password=Email without Password (Automatic Copy)
 enable-birthday=Visa födelsedagar
 enable-cdn-dynamic-resources=Aktivera dynamiska resurser för CDN
 enable-export=Aktivera export
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=Observera att portalen, när detta är aktiverat, inte kommer att kontrollera giltiga lösenord, utgångna lösenord eller låsta användare. Detta hanteras nu av LDAP-serverns lösenordsregler.
 ldap-server-name=Namn
 ldap-servers=LDAP Servrar
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
 liferay-analytics-key=Liferay Analytics-nyckel
 liferay-has-failed-to-connect-to-the-ldap-server=Liferay misslyckades ansluta till LDAP-servern. Kontrollera din konfiguration och verifiera att LDAP-servern är igång.
 liferay-has-failed-to-connect-to-the-opensso-server=Liferay har misslyckats att koppla upp till OpenSSO-servern. Verifiera att konfigurationen stämmer och att OpenSSO-servern körs.
@@ -121,6 +123,7 @@ reset-values=Nollställ värden
 screen-name-attribute=Egenskap för användarnamn
 screen-names=Användarnamn
 select-the-default-ratings-type-for-the-following-applications=Välj standardomdömestyp för följande applikationer. Dessa värde kan ändras per plats i platsinställningarna.
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 service-url-for-opensso-help=Den här URL:en är där OpenSSO kan kommas åt för att använda webbtjänster för autentisering. Om du använder OpenSSO Express 8 eller högre måste servern använda Java 6.
 ssl-error=SSL fel
 system.ldap.configuration.name=System-LDAP
