--- a/modules/apps/login/login-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/login/login-web/src/main/resources/content/Language_es.properties
@@ -1,11 +1,13 @@
 an-email-will-be-sent-to-x-if-you-can-correctly-answer-the-following-question=Se enviará un correo electrónico a {0} si puede responder correctamente a la pregunta siguiente.
 javax.portlet.title.com_liferay_login_web_portlet_FastLoginPortlet=Acceso rápido
 javax.portlet.title.com_liferay_login_web_portlet_LoginPortlet=Login
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 thank-you-for-creating-an-account=Gracias por crear una cuenta de usuario.
-thank-you-for-creating-an-account-your-password-was-sent-to-x=Gracias por crear una cuenta. Su contraseña fue enviada a {0}. por favor chequee sus carpetas de entradas y spam.
 thank-you-for-creating-an-account.-you-will-be-notified-via-email-at-x-when-your-account-has-been-approved=Gracias por crear una cuenta. Será notificado por correo electrónico en {0} cuando su cuenta sea aprobada.
-thank-you-for-creating-an-account.-your-password-is-x=Gracias por crear una cuenta. Tu contraseña es <strong>{0}</strong>.
+use-your-password-to-login=Use your password to log in. (Automatic Copy)
 you-are-about-to-create-an-account-with-openid-x=Va a crear una cuenta con el OpenID {0}. No continúe si no se trata de su cuenta.
 you-are-signed-in-as-x=Está conectado como {0}.
+you-can-set-your-password-following-instructions-sent-to-x=You can set your password by following the instructions sent to {0}. (Automatic Copy)
 your-email-verification-code-was-sent-to-x=El código de verificación de su correo electrónico fue enviado a {0}.
 your-password-was-sent-to-x=Su contraseña fue enviada a {0}.
