--- a/modules/apps/login/login-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/login/login-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,11 +1,13 @@
 an-email-will-be-sent-to-x-if-you-can-correctly-answer-the-following-question=如果您可以正确回答以下问题，会将一封电子邮件发送到 {0}。
 javax.portlet.title.com_liferay_login_web_portlet_FastLoginPortlet=快速登录
 javax.portlet.title.com_liferay_login_web_portlet_LoginPortlet=登录
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 thank-you-for-creating-an-account=感谢您创建账户。
-thank-you-for-creating-an-account-your-password-was-sent-to-x=感谢您创建用户账户。您的密码已被发送至{0}。请检查您的收件箱和垃圾邮件夹。
 thank-you-for-creating-an-account.-you-will-be-notified-via-email-at-x-when-your-account-has-been-approved=感谢您创建账户。账号通过审核后我们将发送通知邮件至{0}。
-thank-you-for-creating-an-account.-your-password-is-x=感谢您创建账户。您的密码是<strong>{0}</strong>。
+use-your-password-to-login=Use your password to log in. (Automatic Copy)
 you-are-about-to-create-an-account-with-openid-x=您即将使用 OpenId {0} 创建一个帐户。除非这是您的帐户，否则请勿继续。
 you-are-signed-in-as-x=您已经以{0}身份登录。
+you-can-set-your-password-following-instructions-sent-to-x=You can set your password by following the instructions sent to {0}. (Automatic Copy)
 your-email-verification-code-was-sent-to-x=您的邮件验证码已被发送至{0}。
 your-password-was-sent-to-x=您的密码已被发送至 {0}。
