--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_ca.properties
@@ -1,6 +1,6 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=S'ha visualitzat un subconjunt de grups per tal que el reviseu.
 a-subset-of-users-has-been-displayed-for-you-to-review=S'ha visualitzat un subconjunt d'usuaris per tal que el reviseu.
-account-created-notification-body-with-password-help=Introduïu el cos del correu electrònic enviat als usuaris en la fase de registre. Aquest missatge ha d'incloure la contrasenya de l'usuari generada automàticament.
+account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password. (Automatic Copy)
 account-created-notification-body-without-password-help=Introduïu el cos del correu electrònic Introduïu el cos del correu electrònic enviat als usuaris en la fase de registre. Aquest missatge no contindrà la contrasenya de l'usuari generada automàticament.
 add-ldap-server=Afegeix un servidor LDAP
 allow-site-administrators-to-display-content-from-other-sites-they-administer=Permet als administradors del lloc mostrar contingut d'altres llocs que administren.
@@ -9,8 +9,6 @@ allow-strangers-to-create-accounts=Voleu permetre als usuaris anònims crear com
 allow-strangers-to-create-accounts-with-a-company-email-address=Voleu permetre als usuaris anònims crear comptes amb un correu electrònic d'empresa?
 allow-subsites-to-display-content-from-parent-sites=Permet als subllocs web poder mostrar el contingut dels llocs web principals.
 allow-users-to-automatically-log-in=Permetre als usuaris connectar automàticament?
-allow-users-to-request-forgotten-passwords=Voleu permetre als usuaris sol·licitar contrasenyes oblidades?
-allow-users-to-request-forgotten-passwords-help=Si se selecciona aquesta opció, els usuaris podran sol·licitar que se'ls enviï al seu correu electrònic una nova contrasenya.
 allow-users-to-request-password-reset-links=Voleu permetre als usuaris sol·licitar algun enllaç per reinicialitzar la contrasenya?
 allow-users-to-request-password-reset-links-help=Si se selecciona aquesta opció, els usuaris podran sol·licitar que se'ls enviï al seu correu electrònic un enllaç per reiniciar la contrasenya.
 appearance=Aparença
@@ -19,6 +17,7 @@ apply-to-existing-users=Aplica-ho als usuaris existents
 are-you-sure-you-want-to-reset-the-configured-values=Segur que voleu reiniciar els valors configurats?
 autogenerate-user-screen-names=Genera automàticament els noms d'usuari
 body-with-password=Cos amb contrasenya
+body-with-password-link=Body with Password Link (Automatic Copy)
 body-without-password=Cos sense contrasenya
 cas-login-url-help=Configura el servidor CAS iniciant URL. Els usuaris es redirigirant a la pàgina de registre CAS quan s'autentifiquin al portal.
 cas-logout-on-session-expiration=Desconnectar al caducar la sessió.
@@ -49,6 +48,8 @@ domain-controller-name-help=Especifiqueu el nom de NetBIOS del controlador del d
 edit-ldap-server=Editar servidor LDAP
 email-address-attribute=Atribut de l'adreça de correu electrònic
 email-sender=Remitent de correu electrònic
+email-with-password=Email with Password (Automatic Copy)
+email-without-password=Email without Password (Automatic Copy)
 enable-birthday=Activa la data de naixement
 enable-cdn-dynamic-resources=Habilitar els recursos dinàmics CDN
 enable-export=Habilitar l'exportació
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=Tingueu en compte que, si se selecciona aquesta opció, el portal no busca contrasenyes vàlides, contrasenyes caducades ni usuaris bloquejats. Ara això ho gestiona la política de contrasenyes del servidor LDAP.
 ldap-server-name=Nom
 ldap-servers=Servidors de LDAP
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
 liferay-analytics-key=Clau de Liferay Analytics
 liferay-has-failed-to-connect-to-the-ldap-server=No s'ha pogut establir cap connexió amb el servidor LDAP. Comproveu la vostra configuració i verifiqueu que aquest servidor estigui funcionant.
 liferay-has-failed-to-connect-to-the-opensso-server=No s'ha pogut establir cap connexió amb el servidor OpenSSO. Comproveu la vostra configuració i verifiqueu que aquest servidor estigui funcionant.
@@ -121,6 +123,7 @@ reset-values=Reinicialitza els valors
 screen-name-attribute=Atribut del nom d'usuari
 screen-names=Noms d'usuari
 select-the-default-ratings-type-for-the-following-applications=Seleccioneu els tipus de valoracions per defecte per a les següents aplicacions. Es poden canviar aquests valors per a cada lloc web a través de la configuració del lloc web.
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 service-url-for-opensso-help=Es pot accedir al OpenSSO des d'aquesta URL per utilitzar els serveis web d'autenticació. Si esteu fent servir l'OpenSSO Express 8 o una versió posterior, es necessari que el servidor s'executi amb Java 6.
 ssl-error=Error de SSL
 system.ldap.configuration.name=Sistema LDAP
