--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_de.properties
@@ -1,6 +1,6 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=Bitte prüfen Sie den nachfolgenden Auszug aus den vorgefundenen Gruppen auf Richtigkeit.
 a-subset-of-users-has-been-displayed-for-you-to-review=Bitte prüfen Sie den nachfolgenden Auszug aus den vorgefundenen Benutzern auf Richtigkeit.
-account-created-notification-body-with-password-help=Geben Sie den Inhalt der E-Mail an, die während der Anmeldung neuer Benutzer versendet. Diese E-Mail sollte das automatisch generiete Kennwort enhalten.
+account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password. (Automatic Copy)
 account-created-notification-body-without-password-help=Geben Sie den Inhalt der E-Mail an, die während der Anmeldung neuer Benutzer versendet. Diese E-Mail enthält nicht das Kennwort des Benutzers.
 add-ldap-server=LDAP-Server hinzufügen
 allow-site-administrators-to-display-content-from-other-sites-they-administer=Site-Administratoren erlauben, Inhalte anderer von ihnen verwalteter Sites anzuzeigen.
@@ -9,8 +9,6 @@ allow-strangers-to-create-accounts=Fremden das Erstellen von Konten erlauben?
 allow-strangers-to-create-accounts-with-a-company-email-address=Fremden das Erstellen von Konten mit einer Firmen-E-Mail-Adresse erlauben?
 allow-subsites-to-display-content-from-parent-sites=Untergeordneten Sites das Anzeigen von Inhalten übergeordneter Sites erlauben.
 allow-users-to-automatically-log-in=Benutzern erlauben, sich automatisch anzumelden.
-allow-users-to-request-forgotten-passwords=Benutzern erlauben, Kennwörter anfordern zu können?
-allow-users-to-request-forgotten-passwords-help=Ist diese Option ausgewählt, können Benutzer ein neues Kennwort anfordern.
 allow-users-to-request-password-reset-links=Benutzern erlauben, einen Link zum Zurücksetzen ihres Kennworts anzufordern?
 allow-users-to-request-password-reset-links-help=Ist diese Option ausgewählt, können Benutzer einen Link zum Zurücksetzen ihres Kennworts anfordern.
 appearance=Auftreten
@@ -19,6 +17,7 @@ apply-to-existing-users=Auf vorhandene Benutzer anwenden
 are-you-sure-you-want-to-reset-the-configured-values=Sind Sie sicher, dass Sie die konfigurierten Werte zurücksetzen möchten?
 autogenerate-user-screen-names=Benutzernamen automatisch generieren
 body-with-password=Inhalt mit Kennwort
+body-with-password-link=Body with Password Link (Automatic Copy)
 body-without-password=Inhalt ohne Kennwort
 cas-login-url-help=CAS Server Login URL. Benutzer werden auf diese Seite weitergeleitet, wenn sie sich am Portal anmelden wollen.
 cas-logout-on-session-expiration=CAS-Abmeldung nach Sitzungsablauf.
@@ -49,6 +48,8 @@ domain-controller-name-help=Geben Sie den NetBIOS Namen des Domänencontrollers 
 edit-ldap-server=LDAP-Server bearbeiten
 email-address-attribute=Email-Adressen-Attribut
 email-sender=E-Mail-Absender
+email-with-password=Email with Password (Automatic Copy)
+email-without-password=Email without Password (Automatic Copy)
 enable-birthday=Eingabe des Geburtstags erlauben
 enable-cdn-dynamic-resources=CDN für dynamische Ressourcen aktivieren
 enable-export=Export aktivieren
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=Beachten Sie bitte, dass das Portal nicht nach gültigen Kennwörtern, abgelaufenen Kennwörtern oder Benutzern, die gesperrt sind, sucht, wenn diese Option aktiviert ist. Das wird nun von der Kennwortrichtlinie des LDAP-Servers ausgeführt.
 ldap-server-name=Name
 ldap-servers=LDAP-Server
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
 liferay-analytics-key=Liferay Analytics Key
 liferay-has-failed-to-connect-to-the-ldap-server=Liferay konnte sich nicht mit dem LDAP-Server verbinden. Überprüfen Sie bitte Ihre Konfiguration und stellen sie sicher, daß der LDAP-Server läuft.
 liferay-has-failed-to-connect-to-the-opensso-server=Liferay konnte sich nicht mit dem OpenSSO-Server verbinden. Überprüfen Sie bitte Ihre Konfiguration und stellen sie sicher, daß der OpenSSO-Server läuft.
@@ -121,6 +123,7 @@ reset-values=Werte zurücksetzen
 screen-name-attribute=Benutzername-Attribut
 screen-names=Benutzernamen
 select-the-default-ratings-type-for-the-following-applications=Wählen Sie den standardmäßigen Bewertungstyp der folgenden Anwendungen. Diese Werte können über die Site-Einstellungen jeder Site geändert werden.
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 service-url-for-opensso-help=Unter dieser URL findet sich der Zugang zu OpenSSO für die Webservices-Authentifizierung. Wenn Sie mit OpenSSO Express 8 oder späteren Versionen arbeiten sollte auf dem Server Java 6 verfügbar sein.
 ssl-error=SSL-Fehler
 system.ldap.configuration.name=System-LDAP
