--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,6 +1,6 @@
 a-subset-of-groups-has-been-displayed-for-you-to-review=请审核所显示的用户组。
 a-subset-of-users-has-been-displayed-for-you-to-review=请审核所显示的用户子集。
-account-created-notification-body-with-password-help=输入注册时发送给用户的电子邮件的正文。其中应包含用户的自动生成密码。
+account-created-notification-body-with-password-reset-help=Enter the body of the email sent to users upon registration. This should contain a link to set a new password. (Automatic Copy)
 account-created-notification-body-without-password-help=输入注册时发送给用户的电子邮件的正文。其中不应包含用户的密码。
 add-ldap-server=添加LDAP服务器
 allow-site-administrators-to-display-content-from-other-sites-they-administer=允许站点管理员展示他们所管理的其他站点的内容
@@ -9,8 +9,6 @@ allow-strangers-to-create-accounts=允许访客创建账户吗？
 allow-strangers-to-create-accounts-with-a-company-email-address=允许访客使用公司邮箱地址创建账户吗？
 allow-subsites-to-display-content-from-parent-sites=允许下级站点展示上级站点的内容。
 allow-users-to-automatically-log-in=允许用户自动登录吗？
-allow-users-to-request-forgotten-passwords=允许用户请求忘记密码吗？
-allow-users-to-request-forgotten-passwords-help=如果选中此选项，用户可以要求发送新密码到他们的电子邮箱。
 allow-users-to-request-password-reset-links=允许用户请求密码重置链接吗？
 allow-users-to-request-password-reset-links-help=如果选中此项，用户可以要求将密码重置的链接发送到电子邮箱。
 appearance=外观
@@ -19,6 +17,7 @@ apply-to-existing-users=适用于现有的用户
 are-you-sure-you-want-to-reset-the-configured-values=确定要重置配置的值吗？
 autogenerate-user-screen-names=自动生成用户屏幕名称
 body-with-password=带有密码的正文
+body-with-password-link=Body with Password Link (Automatic Copy)
 body-without-password=不带密码的正文
 cas-login-url-help=设置 CAS 服务器登录 URL。在向门户进行身份验证时，用户将被重定向到 CAS 登录页面。
 cas-logout-on-session-expiration=注销过期会话。
@@ -49,6 +48,8 @@ domain-controller-name-help=指定域控制器 NetBIOS 名称。
 edit-ldap-server=编辑LDAP服务器
 email-address-attribute=邮箱地址属性
 email-sender=电子邮件发件人
+email-with-password=Email with Password (Automatic Copy)
+email-without-password=Email without Password (Automatic Copy)
 enable-birthday=显示生日
 enable-cdn-dynamic-resources=启用CDN动态资源
 enable-export=启用导出
@@ -87,6 +88,7 @@ ldap-export-must-not-be-enabled-when-autogeneration-of-user-passwords-is-enabled
 ldap-password-policy-help=请注意如果选中此项，门户将不会检查有效密码、过期密码或被锁定的用户。由LDAP服务器和密码策略处理。
 ldap-server-name=名称
 ldap-servers=LDAP服务器
+legacy-template-no-longer-used=Legacy Template (No Longer Used) (Automatic Copy)
 liferay-analytics-key=Liferay分析密钥
 liferay-has-failed-to-connect-to-the-ldap-server=Liferay无法连接到LDAP服务器。请检查您的配置并确认LDAP服务器处于运行状态。
 liferay-has-failed-to-connect-to-the-opensso-server=Liferay无法连接到OpenSSO服务器。请检查您的配置并且确保OpenSSO服务器处于运行状态。
@@ -121,6 +123,7 @@ reset-values=重设值
 screen-name-attribute=屏幕显示名称属性
 screen-names=屏幕显示名称
 select-the-default-ratings-type-for-the-following-applications=为以下应用程序选择默认评分类型。这些默认值可以在相应站点的站点设置中更改。
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded. (Automatic Copy)
 service-url-for-opensso-help=从这一URL使OpenSSO被访问用来认证网络服务。如果您正在使用OpenSSO Express 8或者更高版本，您需要具备运行Java 6的服务器。
 ssl-error=SSL错误
 system.ldap.configuration.name=系统LDAP
